<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetailViewModel"
            type="com.example.movieassignment.ui.movie_detail.MovieDetailViewModel" />
    </data>

        <androidx.core.widget.NestedScrollView
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivVideo"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/dominant_color5"
                    android:scaleType="fitXY"
                    app:image="@{movieDetailViewModel.mutableMovieDetails.posterPath}"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="15dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/stopGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="15dp" />

                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="1"
                    android:text="@{movieDetailViewModel.mutableMovieDetails.title}"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/ivVideo"
                    tools:text="@string/title_movie" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:text="@{movieDetailViewModel.mutableMovieDetails.releaseDate}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
                    tools:text="@string/hint_release_date" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:text="@{movieDetailViewModel.mutableMovieDetails.originalLanguage}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
                    tools:text="@string/hint_language" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
                    tools:text="@string/hint_genre" />

                <TextView
                    android:id="@+id/tvSynopsysText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="4"
                    android:text="@{movieDetailViewModel.mutableMovieDetails.overview}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre"
                    tools:text="@string/hint_synopsys_text" />

                <TextView
                    android:id="@+id/tvCastTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/title_cast"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvSynopsysText"
                    tools:text="@string/title_cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/stopGuideline"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/tvCastTitle" />

                <TextView
                    android:id="@+id/tvCrewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/title_crew"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/rvCast"
                    tools:text="@string/title_crew" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCrew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/tvCrewTitle" />

                <TextView
                    android:id="@+id/tvSimilarMovieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/title_similar_movies"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/stopGuideline"
                    app:layout_constraintStart_toEndOf="@+id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/rvCrew"
                    tools:text="@string/title_similar_movies" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSimilarMovies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/stopGuideline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/tvSimilarMovieTitle"
                    tools:listitem="@layout/movie_credit_item"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>